syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.zktony.proto";
option java_outer_classname = "InstrumentProto";

package instrument;

service InstrumentService {
  rpc GetInstrumentPage (InstrumentRequestPage) returns (InstrumentReplyPage) {}
  rpc SearchInstrument (InstrumentSearch) returns (InstrumentList) {}
  rpc GetById (InstrumentId) returns (Instrument) {}
  rpc AddInstrument (Instrument) returns (InstrumentId) {}
  rpc UpdateInstrument(Instrument) returns (InstrumentReply) {}
  rpc DeleteInstrument (InstrumentId) returns (InstrumentReply) {}
}

message InstrumentRequestPage {
  uint64 page_size = 1;
  uint64 page = 2;
}

message InstrumentReply {bool success = 1;}

message InstrumentSearch {
  string id = 1;
  string name = 2;
  string model = 3;
  string begin_time = 4;
  string end_time = 5;
}

message InstrumentId {
  string id = 1;
}

message Instrument {
  string id = 1;
  string name = 2;
  string model = 3;
  string voltage = 4;
  string power = 5;
  string frequency = 6;
  string attachment = 7;
  string remarks = 8;
  string create_time = 9;
  string create_by = 10;
}

message InstrumentList {repeated Instrument list = 1;}

message InstrumentReplyPage {
  repeated Instrument list = 1;
  uint64 total = 2;
}